--- a/index.css
+++ b/index.css
@@ -4,8 +4,14 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  height: 100vh;
+}
+
 body {
   margin: 0;
+  height: 100vh;
+  height: 100dvh;
 }
 
 :root {
